orch new update

--- a/高可用组件.md
+++ b/高可用组件.md
@@ -83,13 +83,13 @@ ON DUPLICATE KEY UPDATE  cluster_name=VALUES(cluster_name), cluster_domain=VALUE
 后端数据库：
   "MySQLOrchestratorDatabase": "orchestrator",
   "MySQLOrchestratorUser": "orchestrator_rw",
-  "MySQLOrchestratorPassword": "2041c28f72e6bbf6",  
+  "MySQLOrchestratorPassword": "xxx",  
 通过cdb平台创建：
 CREATE USER 'orchestrator_rw'@'10.%' IDENTIFIED BY '2041c28f72e6bbf6';
 GRANT ALL ON orchestrator.* TO 'orchestrator_srv'@'10.%';
 每个集群的拓扑发现：
   "MySQLTopologyUser": "dba",
-  "MySQLTopologyPassword": "60e2e173396e360c",
+  "MySQLTopologyPassword": "xxx",
   
     CREATE USER 'orchestrator'@'orc_host' IDENTIFIED BY 'orc_topology_password';
     GRANT SUPER, PROCESS, REPLICATION SLAVE, REPLICATION CLIENT, RELOAD ON *.* TO 'orchestrator'@'orc_host';
@@ -101,7 +101,7 @@ GRANT ALL ON orchestrator.* TO 'orchestrator_srv'@'10.%';
 ### **3. 配置http认证**
   "AuthenticationMethod": "basic",
   "HTTPAuthUser": "admin",
-  "HTTPAuthPassword": "6133de347d29dfb0",
+  "HTTPAuthPassword": "xxx",
   "AuthUserHeader": "",
   "PowerAuthUsers": [
     "admin"
